# gym-love-letter

./: .envrc  .gitignore  README.md  environment.yaml  mypy.ini  pyproject.toml
gym_love_letter/: TODO.md  engine.py  utils.py
gym_love_letter/agents/: __init__.py  abstract.py  human.py  random.py
gym_love_letter/envs/: __init__.py  actions.py  base.py  observations.py
gym_love_letter/interface/: .envrc  api.py  babel.config.json  package-lock.json  package.json  server.py  tsconfig.json  webpack.config.js
gym_love_letter/interface/src/: index.tsx  types.ts
gym_love_letter/interface/src/api/: endpoints.ts  index.ts  transformers.ts
gym_love_letter/interface/src/components/: Menu.tsx
gym_love_letter/interface/src/components/App/: index.module.scss  index.tsx
gym_love_letter/interface/src/components/Board/: index.module.scss  index.module.scss.d.ts  index.tsx
gym_love_letter/interface/src/components/Card/: index.module.scss  index.module.scss.d.ts  index.tsx
gym_love_letter/interface/src/components/Deck/: index.module.scss  index.module.scss.d.ts  index.tsx
gym_love_letter/interface/src/components/Game/: index.module.scss  index.module.scss.d.ts  index.tsx
gym_love_letter/interface/src/components/GameStatus/: index.module.scss  index.module.scss.d.ts  index.tsx
gym_love_letter/interface/src/components/Opponents/: index.module.scss  index.module.scss.d.ts  index.tsx
gym_love_letter/interface/src/components/Play/: index.module.scss  index.module.scss.d.ts  index.tsx
gym_love_letter/interface/src/components/PlayerHand/: index.module.scss  index.module.scss.d.ts  index.tsx
gym_love_letter/interface/src/redux/: actions.ts  reducer.ts  selectors.ts
gym_love_letter/testing/: test_kl_vs_random.py  test_kl_vs_self.py  test_reward_fns.py  test_vs_random.py  train_ppo.py
tests/: test_envs.py
training/: train_ppo.py  train_ppo2.py  train_ppo_kl.py  train_ppo_masking.py
(+3 files in other folders)
