[tool.poetry]
name = "gym-love-letter"
version = "0.1.0"
description = ""
authors = ["Kronion"]
exclude = [
  "TODO.md",
]

[tool.poetry.dependencies]
python = "^3.8"
stable-baselines3 = "^1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
mypy = "^0.950"
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"

[[tool.mypy.overrides]]
module = [
    "gym.*",
    "numpy.*",
    "pandas.*",
    "stable-baselines3.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.1"
testpaths = [
    "tests",
]
